<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CartFragment">

        <ProgressBar
            android:id="@+id/pb_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleY="2"
            android:scaleX="2"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:id="@+id/recycler_cart"
            android:layout_above="@+id/layout_price"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            tools:listitem="@layout/cart_item_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_price"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_margin="8dp"
            tools:context=".CartFragment">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_checkOut"
                android:text="@string/checkout"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/bottom"/>
        </LinearLayout>
    </RelativeLayout>
</layout>