...
            android:id="@+id/rvCartTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cart_transaction_confirmation"/>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total : Rp 0"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Bayar"/>
        </LinearLayout>
    </LinearLayout>
...
